--- a/app_template/index.html
+++ b/app_template/index.html
@@ -277,7 +277,7 @@
         // 'https://m1brfg19p3.execute-api.eu-central-1.amazonaws.com/count/counter?'
         function updateCounter(type) {
 
-            fetch('https://vqd06guxe5.execute-api.eu-central-1.amazonaws.com/view/count?' + type) // Dynamic request with URL parameter
+            fetch('http://api.collinsunaichi.co.uk/?' + type) // Dynamic request with URL parameter
                 .then(res => res.json())
                 .then(data => {
                     pageviewsCount.textContent = data.pageviews; // Display pageviews to user
