test cloudfront invalidation

--- a/app_template/index.html
+++ b/app_template/index.html
@@ -124,7 +124,7 @@
             <div class="ref">
                 <h3 class="title">PROJECTS</h3>
                 <div class="ref_item">
-                    <h4 class="ref_name">My Resume <ion-icon name="logo-github"></ion-icon></h4>
+                    <h4 class="ref_name">Hosting Serverless Application<ion-icon name="logo-github"></ion-icon></h4>
                     <p class="description">My resume template is a cloud resume challenge project hosted on AWS.</p>
                 </div>
                 <div class="ref_item">
