--- a/app_template/index.html
+++ b/app_template/index.html
@@ -125,7 +125,7 @@
                 <h3 class="title">PROJECTS</h3>
                 <div class="ref_item">
                     <h4 class="ref_name">Hosting Serverless Application<ion-icon name="logo-github"></ion-icon></h4>
-                    <p class="description">My resume template is a cloud resume challenge project hosted on AWS.</p>
+                    <p class="description">I deployed a resume on s3, created an API gateway using SAM.</p>
                 </div>
                 <div class="ref_item">
                     <h4 class="ref_name"> <a class="project-link" href="https://github.com/korlynx/ec2-autoscaling-with-boto3"
