test s3 sync and cloudfront invalidation

--- a/app_template/index.html
+++ b/app_template/index.html
@@ -137,7 +137,7 @@
             
                     </p>
                     <p class="description"> The EC2 instances serving the web application communicate with Amazon S3 Bucket and
-                        DynamoD.
+                        DynamoDB.
                     </p>
                 </div>
             </div>
