new update on CORS error

--- a/app_template/index.html
+++ b/app_template/index.html
@@ -131,7 +131,7 @@
                     <h4 class="ref_name"> <a class="project-link" href="https://github.com/korlynx/ec2-autoscaling-with-boto3"
                             target="_b" rel="noopener">EC2 autoscaling With Boto3 <ion-icon name="logo-github"></ion-icon></a></h4>
             
-                    <p class="description"> Created a Boto3 template that automates the end to end deployement of a web application
+                    <p class="description"> A Boto3 template that automates the end to end deployement of a web application
                         on Amazon EC2 instance. The boto3 template creates a load
                         balancer targeting an autoscaling group of EC2 instances in different availability zones.
             
