--- a/app_template/index.html
+++ b/app_template/index.html
@@ -27,10 +27,11 @@
                         <span class="profile_name_firstName">Collins C.</span>
                         <span class="profile_name_lastName">Unaichi</span>
                     </h1>
-                    <p class="profile_title">Cloud Engineer | Application Manager</p>
-                    <p class="description profile_description">
-                    Hi, I'm Collins, an Application Manager with a strong foundation in cloud computing. My goal is to secure a position as a Cloud Engineer, where I can leverage my expertise to drive innovation and contribute to impactful projects within
-                    the field.
+                    <p class="profile_title">Platform Engineer|Cloud Engineer|AWS Certified|IT Service Management</p>
+                    <p class="description profile_description">Experienced technology professional with a diverse background spanning transport, energy, aerospace, and banking
+                    sectors. Skilled in enhancing system functionality, streamlining processes, and delivering scalable IT solutions.
+                    Committed to driving IT innovations and achieving impactful outcomes through technical proficiency and strategic
+                    leadership.
                     </p>
                     <!-- <a class="downloadBtn" href="./cv.pdf" download="Resume.pdf">Download Resume</a> -->
                     <div class="icons">
@@ -66,35 +67,46 @@
             <div class="certification">
                 <h3 class="title">certifications</h3>
                 <div class="certification_item">
-                    <p class="item_preTitle">2024</p>
-                    <a class="certification-link" href="https://www.credly.com/badges/f7d7a7d7-c555-4f48-893c-907407af0647/linked_in_profile" target="_b" rel="noopener"><h4 class="item_title">AWS Certified Solutions Architect-Associate</h4></a> 
+                    <p class="item_preTitle">March 2024</p>
+                    <h4 class="item_title">AWS Certified Solutions Architect-Associate |<a class="certification-link"
+                        href="https://www.credly.com/badges/f7d7a7d7-c555-4f48-893c-907407af0647/linked_in_profile" target="_b"
+                        rel="noopener"> Link</a></h4>
                     <!-- <p class="description">https://www.credly.com/badges/f7d7a7d7-c555-4f48-893c-907407af0647/linked_in_profile</p> -->
-                    <p class="item_preTitle">2023</p>
-                    <a class="certification-link" href="https://www.credly.com/badges/5f6d5fa9-fa75-495f-ab29-6f70dc3f32b8/linked_in_profile" target="_b" rel="noopener"><h4 class="item_title"> AWS Certified Cloud Practitioner</h4></a>
+                    <p class="item_preTitle">July 2023</p>
+                    <h4 class="item_title"> AWS Certified Cloud Practitioner |<a class="certification-link"
+                        href="https://www.credly.com/badges/5f6d5fa9-fa75-495f-ab29-6f70dc3f32b8/linked_in_profile" target="_b"
+                        rel="noopener"> Link</a></h4>
                     <!-- <p class="description">https://www.credly.com/badges/5f6d5fa9-fa75-495f-ab29-6f70dc3f32b8/linked_in_profile</p> -->
-                    <p class="item_preTitle">2022</p>
-                    <a class="certification-link" href="https://www.coursera.org/account/accomplishments/professional-cert/EN3X7WG59WZQ" target="_b" rel="noopener"><h4 class="item_title">IBM DevOps and Software Engineering by IBM Skills Network</h4></a>
+                    <p class="item_preTitle">November 2022</p>
+                    <h4 class="item_title">IBM DevOps and Software Engineering by IBM Skills Network |<a class="certification-link" href="https://www.coursera.org/account/accomplishments/professional-cert/EN3X7WG59WZQ"
+                        target="_b" rel="noopener"> Link</a></h4>
                     <!-- <p class="description">https://www.coursera.org/account/accomplishments/professional-cert/EN3X7WG59WZQ/p> -->
+                    <p class="item_preTitle">May 2021</p>
+                    <h4 class="item_title">Python Expert Topics - Python Academy</h4>
+                    <p class="item_preTitle">October 2018</p>
+                    <h4 class="item_title">Linux Professional Institute Certificate-1 |<a class="certification-link"
+                            href="lpi.org/v/LPI000402633/mxd5f2l7gl" target="_b"
+                            rel="noopener"> Link</a></h4>
                 </div>
             </div>
             <div class="edu">
                 <h3 class="title">Education</h3>
                 <div class="edu_item">
-                    <p class="item_preTitle">2016-2019</p>
+                    <p class="item_preTitle">April 2016 - November 2019</p>
                     <h4 class="item_title">MSc in Engineering Physics</h4>
                     <p class="item_subtitle">
                         Carl Von Ossietzky Universität Oldenburg Germany
                     </p>
                 </div>
                 <div class="edu_item">
-                    <p class="item_preTitle">2013-2016</p>
+                    <p class="item_preTitle">October 2013 - February 2016</p>
                     <h4 class="item_title">MSc in Environmental Physics</h4>
                     <p class="item_subtitle">
                         University of Bremen Germany
                     </p>
                 </div>
                 <div class="edu_item">
-                    <p class="item_preTitle">2006-2010</p>
+                    <p class="item_preTitle"> September 2006 - November 2010</p>
                     <h4 class="item_title">BSc in Physics</h4>
                     <p class="item_subtitle">
                         Federal University Abeokuta Nigeria
@@ -122,85 +134,113 @@
         </div>
         <div class="group-2">
             <div class="ref">
-                <h3 class="title">PROJECTS</h3>
+                <h3 class="title">CLOUD PROJECTS</h3>
                 <div class="ref_item">
                     <h4 class="ref_name"> <a class="project-link" href="https://github.com/korlynx/cloud-resume" 
-                            target="_b" rel="noopener"> Hosting static website on S3 <ion-icon name="logo-github"></ion-icon></a></h4>
-                    <p class="description">In this project, i deployed a serverless application on AWS. I hosted my HTML resume website on Amazon S3 bucket, the webpage displays a
-                    dynamic visitor counter, using a REST API and a Lambda function backed by DynamoDB. The S3 bucket endpoint, and
-                    REST API endpoint are served using Amazon CloudFront. The project CI/CD pipeline is automated using Github Action. 
-                    </p>
-                    <p class="description">
-                        AWS resources and tools used: Amazon S3 Bucket, IAM, DynamoDB, AWS Lambda, AWS API Gateway, CloudFront, AWS Route53, AWS Severless
-                        Application Management(SAM), and Github Action.
+                            target="_b" rel="noopener"> Deployment of a Serverless Website on AWS <ion-icon name="logo-github"></ion-icon></a></h4>
+                    <p class="description">Tools used: Amazon S3, DynamoDB, AWS Lambda, API Gateway, CloudFront, AWS Route53, GitHub
+                        Actions, AWS Serverless Application Model (SAM), IAM</p>
+
+                    <p class="description" style="text-align:justify;">
+                    <ul class="skills_list description">
+                        <li>Developed a high-performance, serverless application on Amazon S3</li>
+                        <li>Implemented a dynamic visitor counter using AWS Lambda and DynamoDB via a REST API</li>
+                        <li>Ensured fast and secure content delivery with Amazon CloudFront</li>
+                        <li>Automated the CI/CD pipeline with GitHub Actions, enhancing deployment efficiency and reducing manual intervention</li>
+                    </ul>
                     </p>
                 </div>
                 <div class="ref_item">
                     <h4 class="ref_name"> <a class="project-link" href="https://github.com/korlynx/ec2-autoscaling-with-boto3"
-                            target="_b" rel="noopener">EC2 autoscaling With Boto3 <ion-icon name="logo-github"></ion-icon></a></h4>
-            
-                    <p class="description"> A Boto3 template that automates the end to end deployement of a web application
-                        on Amazon EC2 instance. The boto3 template creates a load
-                        balancer targeting an autoscaling group of EC2 instances in different availability zones. The EC2 instances serving the web application communicate with Amazon S3 Bucket and
-                        DynamoDB.
-            
+                            target="_b" rel="noopener"> Application Deployment and EC2 Auto-Scaling Using Boto3 <ion-icon name="logo-github"></ion-icon></a></h4>
+                    <p class="description" style="text-align:justify;">Tools used: Amazon EC2, Amazon S3, DynamoDB, Target group, Auto Scaling Group, Elastic Load
+                                    Balancer, IAM, Boto3</p>
+
+                    <p class="description" style="text-align:justify;"> 
+                    <ul class="skills_list description">
+                        <li>Automated the creation of a load balancer targeting an autoscaling group of EC2 instances across multiple availability
+                        zones</li>
+                        <li>Ensured high availability and scalability by distributing traffic efficiently across EC2 instances.</li>
+                        <li>Enabled communication between the web application and S3 Bucket for storage, and DynamoDB for database
+                        management</li>
+                    </ul>
                     </p>
-                    <!-- <p class="description"> 
-                    </p> -->
                 </div>
             </div>
             <div class="exp">
                 <h3 class="title">Work Experience</h3>
                 <div class="exp_item">
-                    <p class="item_preTitle">2021 - 2024</p>
-                    <h4 class="item_title">BSAG (Bremen Transport Company Germany)</h4>
-                    <p class="item_subtitle">Applications Manager</p>
-                    <p class="description">
-                        Managed the lifecycle of 12 inter-connected Transport Control Systems (ITCS) Applications: Testing, Change request management, User administration, and Backend resource management.
-                    </p>
-                    <p class=" description">
-                    Created a process that streamlined ITCS applications servers (network of 25 servers) updates, eliminating applications
-                    downtime during the servers updates by 60%.
-                    </p>
-                    <p class=" description">
-                        Collaborated with applications users and IT partners to ensure the seamless product integration, and operation in
-                        alignment with business objectives.
+                    <p class="item_preTitle"> January 2020 - Present</p>
+                    <h4 class="item_title">Platform Engineer - Python (Contract IT-Consultant)</h4>
+                    <p class="item_subtitle">Energy System Analysis Associates, Germany</p>
+                    <p class="description" style="text-align:justify;">
+                        <ul class="skills_list description">
+                            <li>Developed and delivered a scalable data warehouse platform aligned with client needs</li>
+                            <li>Developed API clients and implemented automation tools and DevOps practices, reducing deployment time by 50% and
+                            improving platform scalability and reliability for enhanced client efficiency</li>
+                            <li>Actively monitored platform performance, identifying and resolving bottlenecks to achieve 99.9% uptime, ensuring
+                            seamless operation for clients</li>
+                            <li>Strengthened platform security through robust measures, ensuring compliance with industry standards and safeguarding
+                            client data</li>
+                            <li>Configured infrastructure components, deployed applications, and integrated services within platform to enhance
+                            operational efficiency and scalability</li>
+                        </ul>
                     </p>
                 </div>
                 <div class="exp_item">
-                    <p class="item_preTitle">2019 - 2024</p>
-                    <h4 class="item_title">Energy System Analysis Associates (ESA2)</h4>
-                    <p class="item_subtitle">Application Engineer</p>
-                    <!-- <p class="description">
-                        Working part time at ESA2 in a team of 3, as an application engineer focusing on a Data Warehouse web application for
-                        energy system modeling.
-                    </p> -->
-                    <p class="description" >
-                        Managed the end to end development of data warehouse API. The data warehouse application front end is served using NGINX and it talks to an API developed using Flask.
+                    <p class="item_preTitle"> September 2021 - May 2024</p>
+                    <h4 class="item_title">Applications Manager - Inter-modal Transport control System</h4>
+                    <p class="item_subtitle">Bremer Transport Company Germany</p>
+                    <p class="description">
+                        <ul class="skills_list description">
+                            <li>Supervised upgrade and maintenance cycles of critical transportation applications, achieving 99% uptime and compliance
+                            with industry standards</li>
+                            <li>Managed vendor relationships effectively, ensuring timely procurement and implementation of cost-effective solutions
+                            aligned with organisational needs</li>
+                            <li>Enhanced user satisfaction by promptly resolving 95% of application incidents and introducing automation tools that
+                            reduced manual workload by 30%</li>
+                            <li>Produced reports and analytics on application performance, usage, and issues, then provided management with insights
+                            and recommendations based on the data analysis</li>
+                            <li>Monitored and optimised costs for application development and maintenance, achieving improved resource allocation and
+                            30% cost savings</li>
+                        </ul>
                     </p>
-                    <p class="description"> I
-                        gained experience working with Docker containers, continuous integration workflow using tools such as GitLab Runner,
-                        Redis database, and Celery for monitoring application backend.
-                    </p>
-                    <p class="description">Last year, I took the lead on deploying the data warehouse application interface frontend on AWS Cloud on Amazon EC2 instance.
                 </div>
                 <div class="exp_item">
-                    <p class="item_preTitle">2019 - 2021</p>
-                    <h4 class="item_title">German Aerospace Center</h4>
-                    <p class="item_subtitle">Junior Data Analyst- Graduate Researcher</p>
-                    <p class="description">Shortly after my master's thesis I started working full time as a Graduate Researcher focusing on Energy System
-                        Modelling.
-                    </p>
-                    <p class="description">Carried out statistically analysis of energy systems data, generating insightful reports
-                    that contributed to informed decision-making. Leveraged Python libraries such as Pandas, Numpy,
-                    Geopandas, and Xarray for data processing.
+                    <p class="item_preTitle">August 2019 - September 2021</p>
+                    <h4 class="item_title">Data Analyst</h4>
+                    <p class="item_subtitle">German Aerospace Center - Institute For Networked Energy Systems, Germany</p>
                     <p class="description">
-                        Co-contributor to the development of <a class="project-link" href="https://github.com/FlexiGIS/FlexiGIS" target="_b" rel="noopener">FlexiGIS</a>, a Python based GIS tool aimed at simulating urban
-                        renewable energy requirements for future scenarios, and Provided invaluable support to departmental members by actively participating in academic research
-                        projects, leading to notable publications.
+                        <ul class="skills_list description">
+                            <li>Developed predictive models to forecast energy production, consumption, and demand, informing future energy strategies
+                                with industry standards</li>
+                            <li>Analysed weather data time series with advanced statistical techniques, and produced reports to enable renewable
+                            energy planning decisions making</li>
+                            <li>Developed <a class="project-link" href="https://github.com/FlexiGIS/FlexiGIS" target="_b" rel="noopener">FlexiGIS</a> tool, an open source application for the replication of urban energy infrastructure, enhancing its
+                            capacity to model urban renewable energy needs for sustainable development</li>
+                            <li>Compared renewable energy performance metrics against industry benchmarks to identify areas for improvement</li>
+                            <li>Collaborated on academic research projects, advancing knowledge in renewable energy and urban planning (see
+                            publications: <a class="project-link" href="https://ieeexplore.ieee.org/document/9469640" target="_b" rel="noopener">Link1</a>, <a class="project-link" href="https://www.sciencedirect.com/science/article/pii/S1364032122001101" target="_b" rel="noopener">Link2</a>)</li>
+                        </ul>
+                    </p>
+                </div>
+                <div class="exp_item">
+                    <p class="item_preTitle">August 2019 - September 2021</p>
+                    <h4 class="item_title">Junior Account / Relationship Manager</h4>
+                    <p class="item_subtitle">United Bank for Africa PLC, Lagos, Nigeria</p>
+                    <p class="description">
+                    <ul class="skills_list description">
+                        <li>Provided comprehensive financial advice and guidance on banking products, services, and investment options to clients,
+                        achieving increased satisfaction and retention rates</li>
+                        <li>Organised and conducted bi-weekly client meetings, leading to a 20% increase in cross-selling banking products and
+                        services</li>
+                        <li>Proactively monitored account activities and addressed client queries within 24 hours, resulting in improved
+                        satisfaction scores</li>
+                    </ul>
                     </p>
                 </div>
             </div>
+
             <!-- <div class="awards">
                 <h3 class="title">Awards</h3>
                 <div class="awards_item">
